[tool.poetry]
name = "py-utilz"
version = "0.3.4"
description = "Faster, easier, more robust python data analysis"
authors = ["ejolly <eshin.jolly@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "utilz" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.16"
pandas = "^1.2.0"
matplotlib = "^3.1.0"
seaborn = ">=0.12.0"
joblib = "^1.1.0"
toolz = "^0.12.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.3"
mkdocstrings-python = "^0.7.1"
mkdocs-jupyter = "^0.22.0"
pytest = "^7.1.3"
ipykernel = "^6.16.0"
pycodestyle = "^2.9.1"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.5"
black = "^23.3.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
